Pending changes exported from your codespace

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ p{
     background-color: gray;
     font-family: 'Roboto', sans-serif;
     font-weight: bolder;
+    font-style: italic;
 }
 a{
     color: white;
