--- a/Kirby.css
+++ b/Kirby.css
@@ -9,7 +9,7 @@ body{
 
 #subheading{
     color: #FF00FF;
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans, 'Roboto';
     font-weight: bold;
 }
 
